# dwdImporter

./: .gitignore  README.md
ClimateDataGenerator/src/: Constants.h  DWDConstants.cpp  DWDConstants.h  DWDData.cpp  DWDData.h  DWDDateTimeScaleDraw.cpp  DWDDateTimeScaleDraw.h  DWDDateTimeScaleEngine.cpp  DWDDescriptonData.cpp  DWDDescriptonData.h  DWDDownloader.cpp  DWDDownloader.h  DWDLogWidget.cpp  DWDLogWidget.ui  DWDMainWindow.cpp  DWDMainWindow.h  DWDMainWindow.ui  DWDMapDialog.h  DWDPlotZoomer.h  DWDScene.h  DWDTableModel.cpp  DWDTimePlotPicker.h  MetaDataEditWidget.cpp  MetaDataEditWidget.ui  Utilities.cpp  main.cpp
DWDImport/resources/: DWDImport.qrc
DWDImport/src/: Constants.cpp  Constants.h  DWDData.cpp  DWDData.h  DWDDateTimeScaleDraw.cpp  DWDDateTimeScaleDraw.h  DWDDateTimeScaleEngine.cpp  DWDDateTimeScaleEngine.h  DWDDelegate.cpp  DWDDelegate.h  DWDDescriptonData.cpp  DWDDescriptonData.h  DWDDownloader.cpp  DWDDownloader.h  DWDGraphicsView.cpp  DWDLogWidget.ui  DWDMainWindow.cpp  DWDMainWindow.h  DWDMainWindow.ui  DWDMap.cpp  DWDMap.h  DWDMap.ui  DWDMessageHandler.cpp  DWDProgressBar.cpp  DWDProgressBar.h  DWDProgressBar.ui  DWDScene.cpp  DWDScene.h  DWDSortFilterProxyModel.cpp  DWDSortFilterProxyModel.h  DWDTableModel.cpp  DWDTableModel.h  DWDTableView.cpp  DWDTableView.h  DWDTableView.ui  DWDTimePlotPicker.cpp  DWDTimePlotPicker.h  DWD_CheckBox.h  MainWindow.cpp  MainWindow.h  (+4 more)
DWDWeatherDataConverter/projects/cmake_local/: CMakeLists.txt
DWDWeatherDataConverter/resources/: DWDWeatherDataConverter.qrc
DWDWeatherDataConverter/src/: DWDChart.cpp  DWDChart.h  DWDChartView.cpp  DWDChartView.h  DWDConstants.cpp  DWDConversions.h  DWDData.cpp  DWDDateTimeScaleEngine.h  DWDDelegate.cpp  DWDDelegate.h  DWDDescriptonData.cpp  DWDDescriptonData.h  DWDDownloader.cpp  DWDGraphicsView.h  DWDLogWidget.cpp  DWDLogWidget.h  DWDMainWindow.cpp  DWDMainWindow.h  DWDMainWindow.ui  DWDMessageHandler.h  DWDSortFilterProxyModel.cpp  DWDTableModel.cpp  DWDTableModel.h  DWDTimePlotPicker.cpp  DWDUtilities.cpp  DWDUtilities.h  MetaDataEditWidget.cpp  MetaDataEditWidget.h  Utilities.h
data/: export.epw
data/Tests/: FF_Stundenwerte_Beschreibung_Stationen.txt  P0_Stundenwerte_Beschreibung_Stationen.txt  ST_Stundenwerte_Beschreibung_Stationen.txt  TU_Stundenwerte_Beschreibung_Stationen.txt  produkt_ff_stunde_20190912_20200930_00011.txt  (+2 more)
docs/: .gitignore
resources/: .gitignore
(+8 files in other folders)
